--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arial, sans-serif;
+  font-family: Poppins, sans-serif;
 }
 
 /* Scrollbar styling */
@@ -16,29 +16,28 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgba(255, 255, 255, 0.164);
+  background-color: transparent;
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #b30000;
+  background: #605e5e;
 }
 
 body {
-  background-color: #f2f2f2;
   overflow: hidden;
 }
 
 .maincontainer {
   margin: 0;
   padding: 0;
-  background-color: #e0e0e0;
+  background: linear-gradient(110deg, #373636 0%, #373636b4 130.82%);
   width: 100vw;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-
 }
 
 .container {
@@ -47,17 +46,19 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #f5f5f5;
-  border: 2px solid #ddd;
-  border-radius: 15px;
+  background-color: #444;
+  color: #fff;
+  border: 2px;
+  border-radius: 30px;
   padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 10px 10px 4px 0px rgba(0, 0, 0, 0.5);
   overflow-y: scroll;
 }
 
-.container h1 {
-  font-size: 24px;
-  color: #333;
+.maincontainer h1 {
+  font-size: 44px;
+  text-align: center;
+  color: #fff;
   margin-bottom: 20px;
 }
 
@@ -75,10 +76,12 @@ ul {
 
 li {
   width: fit-content;
-  background-color: #fff;
+  background-color: #888282b4;
   margin: 10px 0;
-  border: 2px solid #ddd;
+  border: 2px;
+
   border-radius: 10px;
+  box-shadow: 5px 5px 2px 0px rgba(0, 0, 0, 0.5);
   padding: 10px;
   display: flex;
   justify-content: space-between;
