--- a/views/list.ejs
+++ b/views/list.ejs
@@ -3,25 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>To Do List</title>
     <link rel="stylesheet" href="/styles/main.css" />
   </head>
   <body>
     <div class="maincontainer">
+      <h1>To Do List</h1>
+      <h1><%= todayDay %></h1>
       <div class="container">
-        <h1><%= todayDay %></h1>
-        <h1>To Do List</h1>
         <form action="/add" method="POST">
           <input type="text" name="task" placeholder="Add a task" />
           <button type="submit" id="mybutton">Add</button>
         </form>
         <ul>
           <% tasklist.forEach(task => { %>
-          <li><%= task %> 
-            <form action="/delete" method="POST" style="display: inline;">
-                <input type="hidden" name="taskToDelete" value="<%= task %>"/>
-                <button type="submit">Delete</button>
-            </form></li>
+          <li>
+            <%= task %>
+            <form action="/delete" method="POST" style="display: inline">
+              <input type="hidden" name="taskToDelete" value="<%= task %>" />
+              <button type="submit">Delete</button>
+            </form>
+          </li>
           <% }) %>
         </ul>
       </div>
