--- a/views/list.ejs
+++ b/views/list.ejs
@@ -18,11 +18,12 @@
         <ul>
           <% tasklist.forEach(task => { %>
           <li>
-            <%= task %>
-            <form action="/delete" method="POST" style="display: inline">
-              <input type="hidden" name="taskToDelete" value="<%= task %>" />
-              <button type="submit">Delete</button>
-            </form>
+            <label>
+              <input type="checkbox" name="taskToDelete" class="strikethrough" value="1">
+              <span> <%= task %> </span>
+           </label>
+            
+            
           </li>
           <% }) %>
         </ul>
