--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -62,6 +62,10 @@ body {
   margin-bottom: 20px;
 }
 
+.strikethrough:checked + span{
+  text-decoration:line-through
+}
+
 form {
   margin-top: 5px;
 }
