--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -65,6 +65,25 @@ body {
 .strikethrough:checked + span{
   text-decoration:line-through
 }
+/* Add the following styles for the checkbox */
+.checkbox-style {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  margin-right: 10px;
+  width: 20px;
+  height: 20px;
+  border: 2px solid #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-right: 10px;
+  outline: none;
+}
+
+.checkbox-style:checked {
+  background-color: #ff6f61;
+  border: 2px solid #ff6f61;
+}
 
 form {
   margin-top: 5px;
