--- a/views/list.ejs
+++ b/views/list.ejs
@@ -19,8 +19,8 @@
           <% tasklist.forEach(task => { %>
           <li>
             <label>
-              <input type="checkbox" name="taskToDelete" class="strikethrough" value="1">
-              <span> <%= task %> </span>
+              <input type="checkbox" name="taskToDelete" class="strikethrough checkbox-style" value="<%= task %>">
+              <span>  <%= task %></span>
            </label>
             
             
